--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
       <div class="one-third column" style="margin-top:20px;">
         132 Slaton Highway<br />
         Lubbock, TX 79404<br />
-        (806) 792-5809
+        (806) 500-2182
       </div>
     </div>
     <div class="row">
@@ -113,7 +113,7 @@
         <strong>Is there anything I can’t store?</strong>
         <p>You cannot store combustibles like gasoline, ammunition, etc. You can't store anything illegal.</p>
         <strong>When can I access my unit?</strong>
-        <p>We will give you a code to the gate. That gate is operational between 7AM and 10PM, 7 days per week.</p>
+        <p>We will give you a code to the gate. Your gate code gives you 24/7 access to the facility.</p>
         <strong>What form of payment do you accept?</strong>
         <p>Credit card or debit card are our preferred method of payment. We also accept cash, check, or money order.</p>
         <strong>Is there a security deposit?</strong>
@@ -142,7 +142,7 @@
         &copy; 2016. Crossroads Self Storage.<br />
         132 Slaton Highway<br />
         Lubbock, TX 79404<br />
-        (806) 792-5809
+        (806) 500-2182
       </div>
     </div>
   </div>
