info about rv parking

--- a/public/index.html
+++ b/public/index.html
@@ -58,6 +58,10 @@
         </thead>
         <tbody>
           <tr>
+            <td>RV/Trailer/Vehicle</td>
+            <td>$30</td>
+          </tr>
+          <tr>
             <td>8x10</td>
             <td>$40</td>
           </tr>
@@ -125,7 +129,7 @@
         <strong>Does dust get into the units?</strong>
         <p>Yes, some dust will get inside.</p>
         <strong>Do you have boat or RV storage?</strong>
-        <p>No.</p>
+        <p>Yes. You can park your RV, boat, vehicle, or trailer her. We do not have covered parking or utilities.</p>
         <strong>Where are you located?</strong>
         <p>132 Slaton Highway. If you are inside the loop, head south on Q. You'll cross under I27 and find us on the left.</p>
         <strong>Is your facility secure?</strong>
