--- a/public/index.html
+++ b/public/index.html
@@ -53,44 +53,44 @@
         <thead>
           <tr>
             <th>Size</th>
-            <th>Monthly Price</th>
+            <th>Regular Price</th>
+            <th>Internet Price</th>
           </tr>
         </thead>
         <tbody>
           <tr>
             <td>RV/Trailer/Vehicle</td>
-            <td>$34</td>
+            <td style="text-decoration: line-through;">$40</td>
+            <td>$29</td>
           </tr>
           <tr>
             <td>8x10</td>
-            <td>$44</td>
+            <td style="text-decoration: line-through;">$60</td>
+            <td>$49</td>
           </tr>
           <tr>
             <td>10x10</td>
-            <td>$54</td>
-          </tr>
-          <tr>
-            <td>10x12</td>
+            <td style="text-decoration: line-through;">$70</td>
             <td>$59</td>
           </tr>
           <tr>
             <td>10x14</td>
-            <td>$64</td>
-          </tr>
-          <tr>
-            <td>10x16</td>
+            <td style="text-decoration: line-through;">$80</td>
             <td>$69</td>
           </tr>
           <tr>
             <td>10x20</td>
-            <td>$74</td>
+            <td style="text-decoration: line-through;">$90</td>
+            <td>$79</td>
           </tr>
           <tr>
             <td>10x24</td>
+            <td style="text-decoration: line-through;">$100</td>
             <td>$89</td>
           </tr>
           <tr>
             <td>10x30</td>
+            <td style="text-decoration: line-through;">$120</td>
             <td>$109</td>
           </tr>
         </tbody>
